# Data-Science-and-Machine-Learning

./: README.md  pyproject.toml
Competitions/Kaggle_Playground_Series_3_Ep_14_Prediction_of_Wild_Blueberry_Yield/: submission.csv  xgb-tunning-wild-blueberry-yield-prediction-nb.ipynb
Competitions/Kaggle_Playground_Series_4_Ep_1_Binary_Classification_Customer_Churn/: binary-classification-bank-customer-churn.ipynb  submission.csv
K_Nearest_Neighbours_Project/: Basics.ipynb
K_Nearest_Neighbours_Project/.ipynb_checkpoints/: Basics-checkpoint.ipynb
Kaggle_Playground_Series_S3_Ep_19_Forecasting_Mini_Course_Sales/: forecasting-mini-course-sales.ipynb
Learning/: ISL_Chpater_3_Linear_Regression.ipynb
Learning/Deep Learning/Improving_Deep_Neural_Networks/Week 1/1_Initialisation/: Initialization.ipynb
Learning/Deep Learning/Improving_Deep_Neural_Networks/Week 1/2_Regularisation/: Regularization.ipynb
Learning/Deep Learning/Neural_Networks_Intro/Week3/: Planar_data_classification_with_one_hidden_layer.ipynb
Learning/Neural Networks/: helpers.py  main.py
Naive_Bayes_Project/.ipynb_checkpoints/: SMS_Spam_Filter_Naive_Bayes-checkpoint.ipynb
Projects/K_Nearest_Neighbours/: Car_Prices_KNN.ipynb
Projects/K_Nearest_Neighbours/.ipynb_checkpoints/: Car_Prices_KNN-checkpoint.ipynb
Projects/Tensorflow_Keras_CNN/: minst-digit-recogniser-tensorflow-keras-cnn.ipynb  submission.csv
Star_Classification/: star_classification_notebook.ipynb
Stellar_Classification/: stellar_classification_notebook.ipynb
(+11 files in other folders)
