[tool.poetry]
name = "data-science-and-statistics-projects"
version = "0.1.0"
description = ""
authors = ["James Guy <james.guy@innovid.com>"]
readme = "README.md"
packages = [{include = "data_science_and_statistics_projects"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jupyterlab = "^3.6.1"
pandas = "^1.5.3"
scipy = "^1.9.3"
statsmodels = "^0.13.5"
tensorflow = "^2.11.0"
xgboost = "^1.7.3"
scikit-learn = "^1.2.1"
kaggle = "^1.5.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
